--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <name>Version Utilities Aggregator</name>
+
     <modules>
         <module>version-utilities</module>
         <module>version-utilities-api</module>
