--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 
     <modules>
         <module>version-utilities</module>
+        <module>version-utilities-common</module>
         <module>version-utilities-api</module>
         <module>version-utilities-1-10-R1</module>
     </modules>
