--- a/version-utilities-common/pom.xml
+++ b/version-utilities-common/pom.xml
@@ -10,9 +10,11 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>version-utilities-api</artifactId>
+    <artifactId>version-utilities-common</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
 
-    <name>Version Utilities API</name>
+    <name>Version Utilities Common</name>
+    <description>Version Utilities Common</description>
 
     <dependencies>
         <dependency>
@@ -20,10 +22,14 @@
             <artifactId>spigot-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.tealcubegames.minecraft.spigot</groupId>
-            <artifactId>version-utilities-common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
         </dependency>
     </dependencies>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
     
 </project>
