--- a/version-utilities-1-10-R1/pom.xml
+++ b/version-utilities-1-10-R1/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.tealcubegames.minecraft.spigot</groupId>
         <artifactId>version-utilities-parent</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
 
     <artifactId>version-utilities-1-10-R1</artifactId>
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>com.tealcubegames.minecraft.spigot</groupId>
             <artifactId>version-utilities-api</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.spigotmc</groupId>
