--- a/version-utilities-api/pom.xml
+++ b/version-utilities-api/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.tealcubegames.minecraft.spigot</groupId>
         <artifactId>version-utilities-parent</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
 
     <artifactId>version-utilities-api</artifactId>
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>com.tealcubegames.minecraft.spigot</groupId>
             <artifactId>version-utilities-common</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
     </dependencies>
     
